--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,33 +1,16 @@
 {
   "name": "New Gestão",
-  "short_name": "NG",
+  "short_name": "NewGestao",
   "description": "Controle financeiro para motoristas de app",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#0a0a0a",
-  "theme_color": "#1a1a1a",
+  "theme_color": "#0a0a0a",
   "icons": [
-    {
-      "src": "/favicon.png?v=2",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-192.png?v=2",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icon-512.png?v=2",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/apple-touch-icon.png?v=2",
-      "sizes": "180x180",
-      "type": "image/png"
-    }
+    { "src": "/favicon.png", "sizes": "32x32", "type": "image/png" },
+    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "/apple-touch-icon.png", "sizes": "180x180", "type": "image/png" }
   ]
 }
