--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,12 +6,17 @@
   "scope": "/",
   "display": "standalone",
   "background_color": "#0a0a0a",
-  "theme_color": "#0a0a0a",
+  "theme_color": "#1a1a1a",
   "icons": [
-    { "src": "/favicon.png", "sizes": "32x32", "type": "image/png" },
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "/apple-touch-icon.png", "sizes": "180x180", "type": "image/png" },
-    { "src": "/maskable-icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "/favicon-v2.png", "sizes": "32x32", "type": "image/png" },
+    { "src": "/icon-192-v2.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512-v2.png", "sizes": "512x512", "type": "image/png" },
+    {
+      "src": "/maskable-icon-512-v2.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    { "src": "/apple-touch-icon-v2.png", "sizes": "180x180", "type": "image/png" }
   ]
 }
